--- a/styles.css
+++ b/styles.css
@@ -80,9 +80,71 @@ body {
 
 .input {
   background-color: var(--surface1);
-  color: var(--blue);
+  color: var(--pink);
 }
 
 .input::placeholder {
-  color: red;
+  color: var(--text);
+}
+
+.button {
+  background-color: var(--yellow);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.button:hover {
+  background-color: var(--peach);
+}
+
+.button--copy {
+  background-color: var(--rosewater);
+}
+
+.generatedLink {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+  padding: 1rem;
+  box-shadow: 0 0 4px var(--yellow);
+  border-radius: 10px;
+  display: none;
+}
+
+.generatedLink.show {
+  display: block;
+}
+
+.link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+a {
+  color: var(--blue);
+}
+
+#notification {
+  display: none;
+  background-color: var(--yellow);
+  color: var(--base);
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  font-size: 0.875rem;
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  z-index: 1000;
+}
+
+#notification.show {
+  display: block;
+}
+
+.hidden {
+  display: none;
 }
